k8s/guardians/monitoring/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-operator-grafana
  namespace: monitoring
  labels: &labels
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: prometheus-operator
spec:
  type: ClusterIP
  ports:
    - name: service
      port: 80
      protocol: TCP
      targetPort: grafana
  selector:
    <<: *labels
