k8s/guardians/monitoring/grafana/ingressRoute.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-operator-grafana-http
  namespace: monitoring
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: prometheus-operator
spec:
  entrypoints:
    - http
  routes:
    - match: Host(`metrics.hannahs.family`)
      kind: Rule
      middlewares:
        - name: https-redirect
          namespace: default
      services:
        - name: prometheus-operator-grafana
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-operator-grafana-https
  namespace: monitoring
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: prometheus-operator
spec:
  entrypoints:
    - https
  routes:
    - match: Host(`metrics.hannahs.family`)
      kind: Rule
      services:
        - name: prometheus-operator-grafana
          port: 80
  tls:
    certResolver: default
